Domains: Fix DNS pages header design issues (#58692)
* Fix DNS page header design issues

* Fix width of ellipsis breadcrumb button

* Reduce left-margin of breadcrumb buttons in mobile view

* Align DNS item rows' 3 dots with DNS header's 3 dots

* Fix positioning of ellipsis menu of DNS items in mobile view

* Make DNS items ellipsis popover appear below the icon instead of above

--- a/client/my-sites/domains/domain-management/dns/style.scss
+++ b/client/my-sites/domains/domain-management/dns/style.scss
@@ -79,7 +79,7 @@ body.dns__body-white {
 			}
 
 			@include break-mobile {
-				padding: 10px 0;
+				padding: 16px 0;
 				border-top: none;
 				border-bottom: 1px solid $gray-5;
 			}
@@ -163,8 +163,14 @@ body.dns__body-white {
 
 					&.dns-records-list-item__menu {
 						position: absolute;
-						top: 0;
+						top: -4px;
 						right: 0;
+
+						.ellipsis-menu__toggle {
+							position: relative;
+							padding: 0;
+							right: 8px;
+						}
 
 						@include break-mobile {
 							position: initial;
@@ -205,5 +211,45 @@ body.dns__body-white {
 .restore-default-a-records-dialog__message {
 	@include break-mobile {
 		max-width: 600px;
+	}
+}
+
+a.dns__breadcrumb-button {
+	display: flex;
+	align-items: center;
+
+	&.add-record {
+		@include break-mobile {
+			svg {
+				margin-right: 8px;
+			}
+		}
+	}
+	&.add-record.is-icon-button {
+		width: 40px;
+		display: flex;
+		justify-content: center;
+	}
+}
+
+.dns__breadcrumb-button {
+	color: var( --color-neutral-80 );
+	fill: var( --color-neutral-80 );
+	height: 40px;
+
+	.popover__menu-item[disabled] {
+		svg.gridicon {
+			fill: var( --color-neutral-20 );
+		}
+	}
+
+	&.is-borderless.ellipsis {
+		width: 40px;
+
+		svg.gridicon {
+			top: 0;
+			margin-top: 0;
+			fill: var( --color-neutral-80 );
+		}
 	}
 }
